# rigX

./: .gitignore  MAYA_SETUP.md  OVERVIEW.md  PACKAGING.md  README.md  README_RIGX_TOOLS.md  README_VALIDATOR_UPDATE.md  bootstrap.py  install_maya.bat  install_maya.sh  pyproject.toml  setup.cfg  test_rigx_tools.py
config/shelves/: shelf_RigX.mel
docs/: PATH_RIG_USAGE.md  README.md  TROUBLESHOOTING.md
file/: __init__.py
kntr/: __init__.py  kntr_bisonFinalize.py  kntr_slenderLorisFinalize.py  kntr_tigerFinalize.py
nodes/: rigx_annotateChannel.py
scripts/: create_shelf.py  create_shelf_python.py  generate_controller_icons.py  install_maya.py  replace_skin_icon.py  replace_utils_icon.py  test_shelf.py  test_shelf_simple.py
shows/Kantara/finalize/: charTiger_finalize.py
src/: version.py
src/rigging_pipeline/: __init__.py  bootstrap.py  cli.py  main.py  version.py
src/rigging_pipeline/io/: __init__.py  rigx_buildInfo.py  rigx_file_import_flat.py  rigx_theme.py  rigx_ui_banner.py
src/rigging_pipeline/nodes/: __init__.py  rigx_annotateChannel.py  rigx_hermiteSpline.py
src/rigging_pipeline/publish/: usd_skel_export.py
src/rigging_pipeline/tools/: RG_tool.mel  __init__.py  cometJointOrient.py  cometRename.py  modules_curve_deformer.py  modules_tail.py  rigx_animRig.py  rigx_modules.py  rigx_renameTool.py  rigx_riggingValidator.py  rigx_skinTools.py  rigx_tools.py  rigx_utilityTools.py  rigx_utilityTools_fixed.py  utils_model_validation.py
src/rigging_pipeline/tools/Validator/: README.md
src/rigging_pipeline/tools/batch/: rigx_update_rig_and_reexport_usd.py
src/rigging_pipeline/tools/ui/: __init__.py  rigx_animRig_ui.py  rigx_finalizer_ui.py  rigx_job_badge.py  rigx_job_badge_houdini.py  rigx_model_toolkit_ui.py  rigx_modules_ui.py  rigx_pivot_space_ui.py  rigx_riggingValidator_ui.py  rigx_skinTools_ui.py  rigx_skinWeight_tool_ui.py  rigx_tools_ui.py  rigx_usdskel_export_ui.py  rigx_utilityTools_ui.py
src/rigging_pipeline/utils/: __init__.py  rigx_addBreatheShapes.py  rigx_assignTexture.py  rigx_breatheShapesConnect.py  rigx_copySkin.py  rigx_createAnimSet.py  rigx_displayMode.py  rigx_dynamicMatrixParent.py  rigx_dynamicParent.py  rigx_dynamicParentUI.py  rigx_mirrorVolumeJoint.py  rigx_publishFinalize.py  rigx_sets.py  rigx_speedometer.py  rigx_splineRig.py  rigx_tagTeam.py  utils_cleanup.py  utils_job.py  utils_rig_texture.py  utils_skinWeights.py
src/rigging_pipeline/utils/model/: utils_model_hierarchy.py  utils_model_tags.py
src/rigging_pipeline/utils/rig/: __init__.py  utils_facials.py  utils_name.py  utils_rig.py  utils_rig_texture.py  utils_skinWeights.py
src/rigging_pipeline/utils/rigx_validator/: AssetChecker.py  CharacterSet.py  ColorSetCleaner.py  ControlValues.py  ControllerTag.py  DisplayLayers.py  DupicatedName.py  FreezeTransform.py  HideAllJoints.py  (+8 more)
src/shows/: __init__.py
src/shows/Kantara/: __init__.py
src/test/: rigx_pathUI.py
test/: job_badge.py  test.py
tests/: __init__.py  conftest.py  test_bootstrap.py
utils/: __init__.py  rigx_bakeOPM.py  rigx_blendShapeTransfer.py  rigx_dynamicMatrixParent.py  rigx_extractBlendShape.py  rigx_pivotSpace.py  rigx_publishFinalize.py  rigx_saveLoadSkin.py  rigx_splineRig.py  rigx_tagTeam.py  speedometer.mel
(+30 files in other folders)
