[metadata]
name = rigX
version = 0.1.0
author = Arjun Anil
author_email = arjunanil.online@gmail.com
description = Maya Rigging Pipeline for character animation and creatures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arjunanil-td/rigX
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    click>=8.0
    # If you have local Maya stubs:
    maya2024 @ file:///path/to/maya2024-stubs
    importlib-metadata; python_version<"3.8"

[options.extras_require]
dev =
    pytest>=7.0
    flake8>=6.0
    mypy>=1.10
    black>=23.1.0
    pre-commit>=2.20.0

[options.entry_points]
console_scripts =
    rigx = rigging_pipeline.cli:cli

rigging_pipeline.plugins =
    copy_skin      = rigging_pipeline.tools.copy_skin:CopySkin
    display_mode   = rigging_pipeline.tools.display_mode:DisplayMode
    dynamic_parent = rigging_pipeline.tools.dynamic_parent:DynamicParent
    # …and so on for each generic tool…
